# ahlan-commerce-2

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.admin  Dockerfile.worker  Makefile  README.md  atlas.hcl  cornucopia.toml  docker-compose.yml  mprocs.yaml  plan.md  skills-lock.json  tasks.md
.github/workflows/: ci.yml
apps/admin/: package-lock.json  package.json  playwright.config.ts
apps/admin/src/: index.css  main.tsx
apps/api/: Cargo.toml
apps/api/src/: adapter.rs  config.rs  dto.rs  error.rs  graphql.rs  handlers.rs  lib.rs  main.rs  migrations.rs  openapi.rs  routes.rs
apps/worker/: Cargo.toml
apps/worker/src/: main.rs
db/: initial-products.sql
db/migrations/: 20260618011445_initial.sql  20260705000000_import_jobs.sql  20260712100000_initial_products.sql  atlas.sum
db/refinery_migrations/: V1__initial_products.sql  V2__import_jobs.sql
db/schema/: products.sql
docs/: README.md  api.md  architecture.md  browser-evidence.md  client-choice.md  commands.md  compatibility-adr.md  compatibility-prd.md  dal-alternatives.md  dal.md  deployment-prep.md  deployment.md  final-handoff.md  graphql_examples.md  guard-review.md  guard-skills-review.md  learning-log.md  local-runtime.md  manual-browser-check.md  manual-schema-change.md  operations.md  product-prd.md  raw-sql-drift.md  runtime-model.md  runtime-notes.md  scenarios.md  setup.md
docs/00-start-here/: README.md
docs/01-rust-project-refresher/: README.md
docs/02-axum-basics/: README.md  api-contract.md
docs/03-in-memory-product-api/: README.md  error-contract.md  id-time-contract.md  observability-contract.md
docs/03a-error-handling-rootcause/: README.md
docs/03b-tracing-observability/: README.md
docs/04-postgresql-basics/: README.md  atlas-contract.md  product-api-contract.md
docs/05-make-for-repeated-commands/: README.md
docs/06-mprocs-for-multiple-processes/: README.md
docs/07-sql-first-dal/: README.md  dal-alternatives-template.md  query-contract.md
docs/08-specs-and-tests/: README.md  scenario-template.md
docs/09-graphql-slice/: README.md  schema.graphql
docs/10-tanstack-react-admin-ui/: README.md  client-choice.md
docs/11-background-worker/: README.md  api-contract.md  import-contract.md  import_jobs.sql
docs/12-redis-cache/: README.md  cache-contract.md  cache-keys.md
docs/13-simple-storefront-rendering/: README.md  storefront-contract.md
docs/14-generated-and-written-docs/: README.md  openapi-contract.md
docs/15-ai-workflow-with-speckit/: README.md
docs/16-compatibility-adapter/: README.md  external-product.json
docs/17-guard-skills-review/: README.md
docs/18-prepare-for-deployment/: README.md  docker-contract.md  env.example
docs/19-deploy-with-coolify/: README.md  ci-contract.md  deployment-notes.md
docs/20-final-review/: README.md  handoff-checklist.md
docs/mentor/: cargo-scan-gap-audit.md  coverage-matrix.md
fixtures/: products-import.json
scripts/: sync_refinery_migrations.py
specs/: compatibility-prd.md  product-prd.md  product-scenarios.md
src/: adapter.rs  api.rs  cache.rs  config.rs  db.rs  domain.rs  error.rs  graphql.rs  lib.rs  main.rs  migrations.rs  observability.rs  storefront.rs  worker.rs
(+16 files in other folders)
