[package]
name = "ahlan-commerce"
version = "0.1.0"
edition = "2024"
default-run = "ahlan-commerce"

[dependencies]
async-graphql = { version = "7", features = ["chrono", "uuid"] }
async-graphql-axum = "7"
async-trait = "0.1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde", "clock"] }
refinery = { version = "0.8", features = ["tokio-postgres"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs"] }
tokio-postgres = "0.7"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }
uuid = { version = "1", features = ["serde", "v7"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
