[package]
name = "api"
version = "0.1.0"
edition = "2024"
default-run = "api"

[dependencies]
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
uuid = { version = "1.23.3", features = ["v4", "v7"] }
chrono = { version = "0.4.39", features = ["serde"] }
catalog = { path = "../../packages/catalog" }
cache = { path = "../../packages/cache" }
thiserror = "2.0.18"
rootcause = "0.13.0"
dotenvy = "0.15.7"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tower-http = { version = "0.7.0", features = ["trace", "cors"] }
deadpool-postgres = { version = "0.14.0", features = ["rt_tokio_1"] }
tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4"] }
refinery = { version = "0.8.16", features = ["tokio-postgres"] }
async-graphql = { version = "7.0.2", features = ["chrono"] }
async-graphql-axum = "7.0.2"
utoipa = { version = "5.2.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.1.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }

[[bin]]
name = "docs-gen"
path = "src/bin/docs-gen.rs"

[[bin]]
name = "refinery-migrate"
path = "src/bin/refinery-migrate.rs"
